--- a/Public/cart.html
+++ b/Public/cart.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VF Shop | Cart</title>
 
-    <link rel="stylesheet" href="../css/home.css">
-    <link rel="stylesheet" href="../css/cart.css">
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/cart.css">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="../img/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../img/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../img/icons/favicon-16x16.png">
-    <link rel="manifest" href="../img/icons/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png">
+    <link rel="manifest" href="img/icons/site.webmanifest">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,12 +23,11 @@
 
     <div class="cart-section">
         <div class="product-list">
-            <p class="section-heading">Your cart</p>
+            <h1 class="section-heading">Your cart</h1>
             <div class="cart">
                 <!-- cart product goes here -->
-
             </div>
-            <p class="section-heading">your wishlist</p>
+            <h1 class="section-heading">your wishlist</h1>
             <div class="wishlist">
                 <!-- wishlist product goes here -->
             </div>
@@ -44,10 +43,9 @@
 
     <footer></footer>
 
-    <script src="../js/nav.js"></script>
-    <script src="../js/footer.js"></script>
-    <script src="../js/home.js"></script>
-    <script src="../js/cart.js"></script>
-    <script src="../js/search.js"></script>
+    <script src="js/nav.js"></script>
+    <script src="js/footer.js"></script>
+    <script src="js/home.js"></script>
+    <script src="js/cart.js"></script>
 </body>
 </html>
