--- a/Public/product.html
+++ b/Public/product.html
@@ -71,10 +71,10 @@
         <p class="des"></p>
     </section>
 
-    <section class="similar-products"></section>
+    <section class="similar-products slider-container" role="presentation"></section>
 
     <!--  cards-container you-also-may-like -->
-    <section id="you-also-may-like"></section>
+    <section class="slider-container" id="you-also-may-like" role="presentation"></section>
 
     <footer></footer>
 
