Update HTML, CSS, image alt values; fix checkout error

--- a/Public/index.html
+++ b/Public/index.html
@@ -39,11 +39,11 @@
 
     <section class="collection-container">
         <a href="/women" class="collection">
-            <img src="img/women-collection.jpg" role="img" alt="For Her: women collection">
+            <img src="img/women-collection.jpg" role="img" alt="for her collection">
             <p class="collection-title">For Her</p>
         </a>
         <a href="/men" class="collection">
-            <img src="img/men-collection.jpg" role="img" alt="For Him: men collection">
+            <img src="img/men-collection.jpg" role="img" alt="for him collection">
             <p class="collection-title">For Him</p>
         </a>
         <a href="/accessories" class="collection">
