--- a/Public/login.html
+++ b/Public/login.html
@@ -22,7 +22,7 @@
     <img src="img/loader.gif" class="loader" role="img" alt="Loading...">
 
     <div class="alert-box">
-        <img src="img/error.png" class="alert-img" alt="">
+        <img src="img/error.png" class="alert-img" alt="error alert">
         <p class="alert-msg">Error message</p>
     </div>
 
