--- a/Public/seller.html
+++ b/Public/seller.html
@@ -57,7 +57,7 @@
     </div>
 
     <!--product list-->
-    <div class="product-listing hide">
+    <div class="product-listing card-container hide">
         <a href="/">
             <img src="img/logo-green.png" class="logo" role="img" alt="VFShop">
         </a>
@@ -65,7 +65,7 @@
             <p class="add-product-title">Add product</p>
             <button class="btn" name="button" type="submit" title="Add product" onclick="location.href = '/add-product'">Add product</button>
         </div>
-        <img src="img/no-products.png" class="no-product-image hide" alt="">
+        <img src="img/no-products.png" class="no-product-image hide" alt="No product">
 
         <!-- delete alert -->
         <div class="delete-alert">
