--- a/Public/product.html
+++ b/Public/product.html
@@ -35,9 +35,11 @@
         <div class="details">
             <h2 class="product-brand"></h2>
             <p class="product-short-des"></p>
-            <span class="product-price"></span>
-            <span class="product-actual-price"></span>
-            <span class="product-discount"></span>
+            <div class="price">
+                <span class="product-price"></span>
+                <span class="product-actual-price"></span>
+                <span class="product-discount"></span>
+            </div>
 
             <p class="product-sub-heading">select size</p>
 
@@ -81,6 +83,7 @@
     <script src="../js/nav.js"></script>
     <script src="../js/footer.js"></script>
     <script src="../js/home.js"></script>
+    <script src="../js/token.js"></script>
     <script src="../js/product.js"></script>
     <script src="../js/search.js"></script>
 
