--- a/Public/checkout.html
+++ b/Public/checkout.html
@@ -62,7 +62,6 @@
         </div>
     </div>
 
-
     <footer></footer>
 
     <script src="js/nav.js"></script>
@@ -70,6 +69,7 @@
     <script src="js/footer.js"></script>
     <script src="js/cart.js"></script>
     <script src="js/checkout.js"></script>
+    <script src="js/token.js"></script>
 
 </body>
 </html>
