--- a/Public/index.html
+++ b/Public/index.html
@@ -65,6 +65,7 @@
 
     <script src="js/nav.js"></script>
     <script src="js/footer.js"></script>
+    <script src="js/token.js"></script>
     <script src="js/home.js"></script>
     <script src="js/product.js"></script>
 
